<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_restaurant"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/iv_restaurantLogo"
        android:src="@drawable/restaurant_symbol"
        app:layout_constraintBottom_toTopOf="@+id/tv_tituloApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/tv_tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dm_serif_display"
        android:padding="8dp"
        android:text="@string/tv_calcPropina"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/logo_restaurant"
        app:layout_constraintStart_toStartOf="@+id/logo_restaurant"
        app:layout_constraintTop_toBottomOf="@id/logo_restaurant" />

    <ImageView
        android:id="@+id/iv_dinero"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_dinero"
        app:layout_constraintBottom_toBottomOf="@id/et_valorCuenta"
        app:layout_constraintEnd_toStartOf="@id/et_valorCuenta"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_valorCuenta"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_valorCuenta"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dm_serif_text"
        android:hint="@string/et_valorCuenta"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/tv_tituloApp"
        app:layout_constraintStart_toEndOf="@+id/iv_dinero"
        app:layout_constraintTop_toBottomOf="@+id/tv_tituloApp"
        tools:hint="Valor de la Cuenta: $" />

    <ImageView
        android:id="@+id/iv_porcentaje"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_porcentaje"
        app:layout_constraintBottom_toBottomOf="@id/et_porcentajePropina"
        app:layout_constraintEnd_toEndOf="@+id/iv_dinero"
        app:layout_constraintEnd_toStartOf="@+id/et_porcentajePropina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_dinero"
        app:layout_constraintTop_toTopOf="@+id/et_porcentajePropina" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_porcentajePropina"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dm_serif_text"
        android:hint="@string/et_propina"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/et_valorCuenta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_porcentaje"
        app:layout_constraintStart_toStartOf="@+id/et_valorCuenta"
        app:layout_constraintTop_toBottomOf="@+id/et_valorCuenta"
        tools:hint="Propina: %" />

    <TextView
        android:id="@+id/tvOpcRap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/dm_serif_text"
        android:text="@string/tv_propinaRapida"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_propina10"
        app:layout_constraintEnd_toEndOf="@+id/tv_TotalCuenta"
        app:layout_constraintStart_toStartOf="@+id/et_porcentajePropina" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_propina10"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/btn_10"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_propina15"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/tvOpcRap" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_propina15"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/medium_grey"
        android:text="@string/btn_15"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_propina20"
        app:layout_constraintStart_toEndOf="@+id/btn_propina10"
        app:layout_constraintTop_toTopOf="@+id/btn_propina10"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_propina20"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/btn_20"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_propina10"
        app:layout_constraintEnd_toEndOf="@+id/tvOpcRap"
        app:layout_constraintStart_toEndOf="@+id/btn_propina15"
        app:layout_constraintTop_toTopOf="@+id/btn_propina10" />

    <TextView
        android:id="@+id/tv_titTotalCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/dm_serif_display"
        android:text="Total:"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_TotalCuenta"
        app:layout_constraintEnd_toStartOf="@+id/tv_TotalCuenta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_porcentaje"
        app:layout_constraintTop_toTopOf="@+id/tv_TotalCuenta" />

    <TextView
        android:id="@+id/tv_titTotalPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/dm_serif_display"
        android:text="Propina:"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_TotalPropina"
        app:layout_constraintEnd_toStartOf="@+id/tv_TotalPropina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_porcentaje"
        app:layout_constraintTop_toTopOf="@+id/tv_TotalPropina" />

    <TextView
        android:id="@+id/tv_TotalPropina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/dm_serif_text"
        android:hint="$"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_TotalCuenta"
        app:layout_constraintEnd_toEndOf="@+id/et_porcentajePropina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_titTotalPropina"
        app:layout_constraintStart_toStartOf="@+id/et_porcentajePropina"
        app:layout_constraintTop_toBottomOf="@+id/et_porcentajePropina"
        tools:hint="$1.000" />

    <TextView
        android:id="@+id/tv_TotalCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/dm_serif_text"
        android:hint="$"
        android:textAlignment="viewEnd"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/tvOpcRap"
        app:layout_constraintEnd_toEndOf="@+id/et_porcentajePropina"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toEndOf="@+id/tv_titTotalCuenta"
        app:layout_constraintStart_toStartOf="@+id/et_porcentajePropina"
        tools:hint="$1.000.000" />

</androidx.constraintlayout.widget.ConstraintLayout>
